change entity author to todo
