# docs/swagger.json
@@ -7,9 +7,9 @@
         "version": "1.0.4"
     },
     "paths": {
-        "/api/v1/authors": {
+        "/api/v1/todos": {
             "get": {
-                "description": "Fetch Author",
+                "description": "Fetch Todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,9 +17,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authors"
+                    "Todos"
                 ],
-                "summary": "Fetch Author",
+                "summary": "Fetch Todo",
                 "responses": {
                     "200": {
                         "description": ""
@@ -27,7 +27,7 @@
                 }
             },
             "post": {
-                "description": "Create Author",
+                "description": "Create Todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,17 +35,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authors"
+                    "Todos"
                 ],
-                "summary": "Create Author",
+                "summary": "Create Todo",
                 "parameters": [
                     {
-                        "description": "Author to create",
-                        "name": "author",
+                        "description": "Todo to create",
+                        "name": "todo",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.CreateAuthorReq"
+                            "$ref": "#/definitions/request.CreateTodoReq"
                         }
                     }
                 ],
@@ -56,9 +56,9 @@
                 }
             }
         },
-        "/api/v1/authors/{id}": {
+        "/api/v1/todos/{id}": {
             "get": {
-                "description": "Get Author",
+                "description": "Get Todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -66,13 +66,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authors"
+                    "Todos"
                 ],
-                "summary": "Get Author",
+                "summary": "Get Todo",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "author id",
+                        "description": "todo id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -85,7 +85,7 @@
                 }
             },
             "put": {
-                "description": "Update Author",
+                "description": "Update Todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,24 +93,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authors"
+                    "Todos"
                 ],
-                "summary": "Update Author",
+                "summary": "Update Todo",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "author id",
+                        "description": "todo id",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Author to update",
-                        "name": "author",
+                        "description": "Todo to update",
+                        "name": "todo",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.UpdateAuthorReq"
+                            "$ref": "#/definitions/request.UpdateTodoReq"
                         }
                     }
                 ],
@@ -121,7 +121,7 @@
                 }
             },
             "delete": {
-                "description": "Delete Author",
+                "description": "Delete Todo",
                 "consumes": [
                     "application/json"
                 ],
@@ -129,13 +129,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Authors"
+                    "Todos"
                 ],
-                "summary": "Delete Author",
+                "summary": "Delete Todo",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "author id",
+                        "description": "todo id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -150,7 +150,7 @@
         }
     },
     "definitions": {
-        "request.CreateAuthorReq": {
+        "request.CreateTodoReq": {
             "type": "object",
             "properties": {
                 "name": {
@@ -158,7 +158,7 @@
                 }
             }
         },
-        "request.UpdateAuthorReq": {
+        "request.UpdateTodoReq": {
             "type": "object",
             "properties": {
                 "name": {
