# entity/author.go
@@ -4,8 +4,8 @@ import (
 	"time"
 )
 
-// Author ...
-type Author struct {
+// Todo ...
+type Todo struct {
 	ID        int64     `json:"id"`
 	Name      string    `json:"name"`
 	CreatedAt time.Time `json:"created_at"`
